--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -6,7 +6,7 @@ body{
     padding: 0;
     width: 100vw;
     height: 100vh;
-    background: url(".https://jogododragao.com.br/img/back.jpeg");
+    background: url("../img/back.jpeg");
     background-repeat: no-repeat;
     background-position: 100% 0;
     background-size: cover;
@@ -20,7 +20,7 @@ body{
     width: 430px;
     max-width: 600px;
     height: 100%;
-    background: url(".https://jogododragao.com.br/img/arena.jpeg");
+    background: url("../img/arena.jpeg");
     background-repeat: no-repeat;
     background-position: 100% 0;
     background-size: cover;
@@ -142,7 +142,7 @@ body{
     width: 430px;
 }
 .footer-image-land, .footer-image-land-pc, .footer-image-port {
-    background-image: url(.https://jogododragao.com.br/img/footer.png);
+    background-image: url(../img/footer.png);
     background-position: 50%;
     background-size: cover;
     position: absolute;
