--- a/assets/css/com.css
+++ b/assets/css/com.css
@@ -139,7 +139,7 @@ tr {
 
 .fb-comments-comment-actions likes {
   font-size: 13px;
-  background: url(.https://jogododragao.com.br/assets/img/likes.png);
+  background: url(../assets/img/likes.png);
   background-repeat: no-repeat;
   padding-left: 43px;
   padding-right: 6px;
